--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.28.1"
+    "react-router-dom": "^6.28.1",
+    "sweetalert2": "^11.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
